--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "helmet": "^7.0.0",
+    "helmet": "^7.2.0",
+    "morgan": "^1.10.1",
+    "node-fetch": "^2.7.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
